--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -26,7 +26,7 @@
                 class="navbar">
                 <!-- Reference: https://www.gethalfmoon.com/docs/navbar -->
                 
-                {{title}}
+                Tyler Tomaseski's Portfolio
             </nav>
             <!-- Navbar end -->
             <!-- Content wrapper start -->
@@ -39,16 +39,15 @@
                                     2. https://www.gethalfmoon.com/docs/grid-system/#building-a-dashboard -->
                 {{content|safe}}
             </div>
+
+            <!-- footer -->
+            <div class="content-wrapper">
+                Footer
+            </div>
             <!-- Content wrapper end -->
         </div>
         <!-- Page wrapper end -->
         <!-- Halfmoon JS -->
         <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
-    </body>
-    <body>
-        <header></header>
-        <main>
-            <article></article>
-        </main</body>
     </body>
 </html>
