--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -7,7 +7,7 @@ layout: base.njk
 <div class="container-lg">
 
 <div class="content">
-  <h1 class="content-title">Projects I've worked on</h1>
+  <h1 id="page-title">{{title}}</h1>
 </div>
 
 
