--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,5 +1,7 @@
 header {
-    font-size: 50px;
+    font-size: 28px;
+    font-family: 'Signika Negative', sans-serif;
+    margin-right: 10px;
 }
 
 .content-title {
