--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -1,41 +1,106 @@
 ---
 layout: base.njk
 ---
-<div class="container-lg">
-  <div class="row justify-content-center">
+<main class="container">
+<!-- ABOUT ME -->
 
-    <div class="content">
-      <h1 id="page-title">{{title}}</h1>
-    </div>
 
-  </div>
+  <!-- START PROJECTS -->
+  <hgroup>
+    <h1 id="page-title">Noteworthy Shipped Titles</h1>
+    <table>
+      <thead>
+        <tr>
+          <th scope="col">Project</th>
+          <th scope="col">Client</th>
+          <th scope="col">Employer</th>
+          <th scope="col">Role</th>
+          <th scope="col">Start/End Date</th>
+        </tr>
+      </thead>
+      <tbody>
 
-  <div class="row justify-content-center">
-
-    {{ content | safe }}
-
-    {% for page in collections.pages %}
-      <div class="col-sm-6 col-md-5 col-lg-4">
-        <div class="card p-0">
-          <!-- p-0 = padding: 0 -->
-          <img src={{page.data.img}} class="img-fluid rounded-top" alt="...">
-          <!-- rounded-top = rounded corners on the top -->
-          <!-- Nested content container inside card -->
-          <div class="content">
-            <h2 class="content-title">
+        {{ content | safe }}
+        {% for page in collections.pages %}
+          <tr>
+            <th scope="row">
+              {# <a href="{{page.url}}" data-tooltip="Click to learn about my involvement"> #}
               {{page.data.title}}
-            </h2>
-            <p class="text-muted">
-              {{page.data.summary}}
-            </p>
-            <div class="text-right">
-              <!-- text-right = text-align: right -->
-              <a href="{{page.url}}" class="btn btn-primary" role="button">Read More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    {%- endfor %}
+            </th>
+            <td>{{page.data.client}}</td>
+            <td>{{page.data.employer}}</td>
+            <td>{{page.data.role}}</td>
+            <td>{{page.data.duration}}</td>
+          </tr>
+        {%- endfor %}
+      </tbody>
+    </table>
+  </hgroup>
+  <!-- END PROJECTS -->
 
-  </div>
-</div>
+  <!-- EMPLOYMENT HISTORY -->
+  <hgroup>
+    <h1 id="page-title">Employment</h1>
+    <table>
+      <thead>
+        <tr>
+          <th scope="col">Years</th>
+          <th scope="col">Employer</th>
+          <th scope="col">Titles</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">
+              2021-Ongoing
+          </th>
+          <td>Dream Toaster Games</td>
+          <td>Co-Founder, Director, Lead-Developer, Technical Producer</td>
+        </tr>
+        <tr>
+          <th scope="row">
+              2020
+          </th>
+          <td>DragonGlitch Games</td>
+          <td>Principal Unity Consultant</td>
+        </tr>
+        <tr>
+          <th scope="row">
+              2019-2020
+          </th>
+          <td>Nerve Software</td>
+          <td>Unity Consultant</td>
+        </tr>
+        <tr>
+          <th scope="row">
+              2019
+          </th>
+          <td>Kalkomey</td>
+          <td>Sr. Unity Developer</td>
+        </tr>
+        <tr>
+          <th scope="row">
+              2014-2019, 2019-2021
+          </th>
+          <td>PolyKnight Games</td>
+          <td>Co-Founder, Director, Lead-Developer, Technical Producer</td>
+        </tr>
+      </tbody>
+    </table>
+  </hgroup>
+  <!-- END EMPLOYMENT HISTORY -->
+
+  {% for page in collections.pages %}
+    <article>
+      <header>
+        <img src={{page.data.img}} class="img-fluid rounded-top" alt="...">
+      </header>
+      <body>
+        <p>
+          <a href="{{page.url}}" data-tooltip="Click to learn about my involvement">{{page.data.title}}</a>
+        </p>
+        <p>{{page.data.summary}}</p>
+      </body>
+    </article>
+  {%- endfor %}
+</main>
