--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -2,105 +2,92 @@
 layout: base.njk
 ---
 <main class="container">
-<!-- ABOUT ME -->
-
-
-  <!-- START PROJECTS -->
-  <hgroup>
-    <h1 id="page-title">Noteworthy Shipped Titles</h1>
-    <table>
-      <thead>
-        <tr>
-          <th scope="col">Project</th>
-          <th scope="col">Client</th>
-          <th scope="col">Employer</th>
-          <th scope="col">Role</th>
-          <th scope="col">Start/End Date</th>
-        </tr>
-      </thead>
-      <tbody>
-
-        {{ content | safe }}
-        {% for page in collections.pages %}
-          <tr>
-            <th scope="row">
-              {# <a href="{{page.url}}" data-tooltip="Click to learn about my involvement"> #}
-              {{page.data.title}}
-            </th>
-            <td>{{page.data.client}}</td>
-            <td>{{page.data.employer}}</td>
-            <td>{{page.data.role}}</td>
-            <td>{{page.data.duration}}</td>
-          </tr>
-        {%- endfor %}
-      </tbody>
-    </table>
-  </hgroup>
-  <!-- END PROJECTS -->
+  <!-- ABOUT ME -->
 
   <!-- EMPLOYMENT HISTORY -->
-  <hgroup>
-    <h1 id="page-title">Employment</h1>
-    <table>
-      <thead>
-        <tr>
-          <th scope="col">Years</th>
-          <th scope="col">Employer</th>
-          <th scope="col">Titles</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">
+  <section>
+    <hgroup>
+      <h1>About Me</h1>
+      <div class="about_me_container">
+        <div>
+          <img  src="img/selfie.png"/>
+        </div>
+        <div>
+          <p>Hi! I'm Tyler Tomaseski. I have 7-years of development, management, and production experience. I've worked in console games, VR, AR, mobile, and more! I've co-founded 2 game studios, built teams for projects and estimates, managed teams, led teams, self published games, developed games with a publisher, ported games in various game engines, and more!</p>
+          <p>I'm experienced in building teams, running teams, and doing the work! I love Unity, but also work with Unreal Engine and id Tech Engine</p>
+        </div>
+      </div>
+    </hgroup>
+  </section>
+  <section>
+    <hgroup>
+      <h1>Employment</h1>
+      <table>
+        <thead>
+          <tr>
+            <th scope="col">Years</th>
+            <th scope="col">Employer</th>
+            <th scope="col">Titles</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">
               2021-Ongoing
           </th>
-          <td>Dream Toaster Games</td>
-          <td>Co-Founder, Director, Lead-Developer, Technical Producer</td>
-        </tr>
-        <tr>
-          <th scope="row">
+            <td>Dream Toaster Games</td>
+            <td>Co-Founder, Director, Lead-Developer, Technical Producer</td>
+          </tr>
+          <tr>
+            <th scope="row">
               2020
           </th>
-          <td>DragonGlitch Games</td>
-          <td>Principal Unity Consultant</td>
-        </tr>
-        <tr>
-          <th scope="row">
+            <td>dragonGlitch Games</td>
+            <td>Principal Unity Consultant</td>
+          </tr>
+          <tr>
+            <th scope="row">
               2019-2020
           </th>
-          <td>Nerve Software</td>
-          <td>Unity Consultant</td>
-        </tr>
-        <tr>
-          <th scope="row">
+            <td>Nerve Software</td>
+            <td>Unity Consultant</td>
+          </tr>
+          <tr>
+            <th scope="row">
               2019
           </th>
-          <td>Kalkomey</td>
-          <td>Sr. Unity Developer</td>
-        </tr>
-        <tr>
-          <th scope="row">
+            <td>Kalkomey</td>
+            <td>Sr. Unity Developer</td>
+          </tr>
+          <tr>
+            <th scope="row">
               2014-2019, 2019-2021
           </th>
-          <td>PolyKnight Games</td>
-          <td>Co-Founder, Director, Lead-Developer, Technical Producer</td>
-        </tr>
-      </tbody>
-    </table>
-  </hgroup>
+            <td>PolyKnight Games</td>
+            <td>Co-Founder, Director, Lead-Developer, Technical Producer</td>
+          </tr>
+        </tbody>
+      </table>
+    </hgroup>
+  </section>
   <!-- END EMPLOYMENT HISTORY -->
 
-  {% for page in collections.pages %}
-    <article>
-      <header>
-        <img src={{page.data.img}} class="img-fluid rounded-top" alt="...">
-      </header>
-      <body>
-        <p>
-          <a href="{{page.url}}" data-tooltip="Click to learn about my involvement">{{page.data.title}}</a>
-        </p>
-        <p>{{page.data.summary}}</p>
-      </body>
-    </article>
-  {%- endfor %}
-</main>
+  <section>
+    <hgroup>
+      <h1>Noteworthy Shipped Titles</h1>
+      {% for page in collections.pages %}
+        <div class="grid">
+          <div>
+            <img src={{page.data.img}} class="img-fluid rounded-top" alt="...">
+          </div>
+          <hgroup>
+            <h5>
+              <a href="{{page.url}}" data-tooltip="Click to learn about my involvement">{{page.data.title}}</a>
+            </h5>
+            <p>{{page.data.summary}}</p>
+          </hgroup>
+        </div>
+      {%- endfor %}
+    </hgroup>
+</section>
+  </main>
