--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -41,3 +41,58 @@ html[data-theme='dark'] {
 html[data-theme='dark'] .docusaurus-highlight-code-line {
     background-color: rgba(0, 0, 0, 0.3);
 }
+
+@import url('https://use.typekit.net/zjc1nzd.css');
+h1 {
+    font-family: oscine, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    text-align: center;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h1+table {
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+}
+
+h2 {
+    font-family: oscine, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.navbar__title {
+    font-family: oscine, sans-serif;
+    font-weight: 800;
+    font-style: normal;
+}
+
+h3,
+.menu__link,
+.navbar__item {
+    font-family: oscine, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.table-of-contents__link {
+    font-family: oscine, sans-serif;
+    font-size: 0.9rem;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.navbar__link--active,
+.menu__link--active,
+.table-of-contents__link--active {
+    font-style: italic;
+}
+
+p {
+    font-family: oscine, sans-serif;
+    font-weight: 400;
+}
